# parka

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  compile_commands.json  meson.build  notes.txt  warbler.sublime-project  warbler.sublime-workspace
.cache/clangd/index/: array.hpp.0D8423DA1D84B6BB.idx  box.hpp.B64784F21B488FA4.idx  cli.cpp.7A736FCD5E5C7591.idx  cli.hpp.F686541E41A00AF2.idx  context.cpp.4B8CE1D5A1D24A96.idx  context.hpp.1C6F497D9497D3A0.idx  file.cpp.06BC40D0E2976806.idx  file.cpp.C4186E2F7E0C8731.idx  file.hpp.04D49FE8E7140581.idx  file.hpp.F3DB970910139881.idx  main.cpp.6D63AE7FED9468C8.idx  optional.hpp.7DD648272645DC75.idx  parser.cpp.373432A74E1A509C.idx  parser.hpp.4B8DAFB19787D639.idx  preprocessor.cpp.3EBF811C5C18B901.idx  print.cpp.8051AC4E5E747616.idx  (+22 more)
.ccls-cache/@@home@isaac@source@repos@warbler/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@assert.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthread_stack_min-dynamic.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@timex.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__locale_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  (+179 more)
.ccls-cache/@home@isaac@source@repos@warbler/: include@warbler@cli.hpp  include@warbler@cli.hpp.blob  include@warbler@context.hpp  include@warbler@context.hpp.blob  include@warbler@file.hpp  include@warbler@file.hpp.blob  include@warbler@parser.hpp  include@warbler@parser.hpp.blob  include@warbler@preprocessor.hpp  include@warbler@preprocessor.hpp.blob  include@warbler@snippet.hpp.blob  include@warbler@state.hpp  include@warbler@state.hpp.blob  include@warbler@symbol.hpp  include@warbler@symbol.hpp.blob  include@warbler@symbol_table.hpp  include@warbler@symbol_table.hpp.blob  include@warbler@syntax.hpp.blob  include@warbler@token.hpp  include@warbler@token.hpp.blob  include@warbler@type.hpp  include@warbler@type.hpp.blob  include@warbler@util@array.hpp.blob  include@warbler@util@box.hpp  include@warbler@util@box.hpp.blob  include@warbler@util@file.hpp.blob  include@warbler@util@optional.hpp  include@warbler@util@optional.hpp.blob  include@warbler@util@primitive.hpp.blob  include@warbler@util@print.hpp  include@warbler@util@print.hpp.blob  include@warbler@util@result.hpp  include@warbler@util@result.hpp.blob  include@warbler@util@string.hpp  include@warbler@util@string.hpp.blob  include@warbler@util@table.hpp.blob  include@warbler@validator.hpp  include@warbler@validator.hpp.blob  src@main.cpp  src@main.cpp.blob  (+21 more)
include/: lex.h  token.h
include/grackle/: analyzer.h  assert.h  defs.h  generator.h  lex.h  lexer.h  log.h  node.h  parser.h  preprocessor.h  string.h  token.h  toklist.h
include/parka/: Highlight.hpp  Storage.hpp  Token.hpp  c_generator.h  c_generator.hpp  entity.hpp  entity_context.hpp  global_symbol_table.hpp  highlight.hpp  local_symbol_table.hpp  parser.h  parser.hpp  scope.h  scope.hpp  snippet.h  state.h  state.hpp  symbol.h  symbol.hpp  symbol_table.h  symbol_table.hpp  token.h  token.hpp  type.hpp  validator.h  validator.hpp
include/warbler/: analyzer.h  ast.h  c_generator.h  c_generator.hpp  cli.h  cli.hpp  context.h  context.hpp  conversion.h  directory.h  directory.hpp  error.h  file.h  file.hpp  log.h  parser.h  parser.hpp  preprocessor.h  primitive.h  primitive.hpp  print.h  print.hpp  result.hpp  scope.h  snippet.h  snippet.hpp  state.h  string.h  string.hpp  symbol.h  symbol_id.h  symbol_table.h  symbol_table.hpp  syntax.h  syntax.hpp  token.h  token.hpp  token_array.h  tokenizer.h  tokenizer.hpp  (+4 more)
lib/c-utils/: .gitignore  LICENSE  README.md
src/: analyzer.c  analyzer.cpp  generator.c  grackle.c  impl.c  lex.c  lexer.c  lexer.cpp  log.c  main.c  main.cpp  node.c  parka.cpp  parser.c  parser.cpp  preprocessor.c  preprocessor.cpp  sandbox.cpp  spiel.c  string.c
src/container/: impl.c
src/data/: node.c  string.c
src/node/: identifier.cpp
src/parka/: Storage.cpp  Token.cpp  c_generator.c.old  global_symbol_table.cpp  local_symbol_table.cpp  parser.c  parser.cpp  scope.c  scope.cpp  snippet.c  symbol.c  symbol.cpp  symbol_table.c  token.c  token.cpp  type.cpp  validator.c  validator.cpp  variable.c  variable.cpp
src/test/: file.cpp  flatmap.cpp  main.cpp  test_parser.c  test_parser.cpp  test_tokenizer.c  test_tokenizer.cpp  utils.cpp
src/warbler/: analyzer.cpp  ast.c  c_generator.c.old  c_generator.cpp  cli.c  cli.cpp  context.c  context.cpp  conversion.c  directory.c  directory.cpp  error.c  file.c  file.cpp  function.c  function.cpp  impl.c  lexer.cpp  log.cpp.ignore  parser.c  parser.cpp  preprocessor.c  preprocessor.cpp  print.c  print.cpp  scope.c  snippet.c  string.c  string.cpp  symbol.c  symbol.cpp  symbol_id.c  symbol_table.c  symbol_table.cpp  syntax.c  syntax.cpp  token.c  token.cpp  token_array.c  tokenizer.c  (+5 more)
test/: file.gx  file.wb  main  test.bat  test.sh
test/src/: main.pk
tests/: file.cpp  utils.cpp
(+1599 files in other folders)
